# mesh_simplifier

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  setup.py
src/: main.cpp
